Making some changes in the gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,31 @@
-## Folders ##
-target/
+### Intellij ###
 out/
-.idea/
-.mvn/
-## Generic Files ##
+### Java ###
+# Compiled class file
+*.class
+# Log file #
+*.log
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+### Generic Files ###
 *.iws
 *.iml
 *.ipr
-## Specific Files ##
-HELP.md
-mvnw.cmd
-mvnw
+### Maven ###
+target/
+.idea/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
